[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/levels/start.gd" type="Script" id=1]
[ext_resource path="res://scenes/levels/title hallway.png" type="Texture" id=2]
[ext_resource path="res://sprites/ui/title.png" type="Texture" id=3]
[ext_resource path="res://button.tres" type="StyleBox" id=4]
[ext_resource path="res://button_hover.tres" type="StyleBox" id=5]
[ext_resource path="res://button_pressed.tres" type="StyleBox" id=6]
[ext_resource path="res://scenes/utilities/parallax.gd" type="Script" id=7]
[ext_resource path="res://sprites/environment/sky/parallaxbg_clouds.png" type="Texture" id=8]
[ext_resource path="res://sprites/environment/sky/parallaxbg_bunnies.png" type="Texture" id=9]
[ext_resource path="res://sprites/environment/sky/parallaxbg_sky.png" type="Texture" id=10]
[ext_resource path="res://sprites/environment/sky/parallaxbg-sunst.png" type="Texture" id=11]
[ext_resource path="res://sprites/ui/hallpass_logo.png" type="Texture" id=12]

[sub_resource type="DynamicFontData" id=3]
antialiased = false
font_path = "res://fonts/HungryPro.ttf"

[sub_resource type="DynamicFont" id=2]
size = 24
extra_spacing_top = 2
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
antialiased = false
font_path = "res://fonts/HungryPro.ttf"

[sub_resource type="DynamicFont" id=6]
font_data = SubResource( 5 )

[node name="Start Page" type="CanvasLayer"]

[node name="Control" type="Control" parent="." groups=[
"player",
]]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="Control"]
layer = -1
follow_viewport_enable = true
scroll_ignore_camera_zoom = true
script = ExtResource( 7 )

[node name="sky" type="ParallaxLayer" parent="Control/ParallaxBackground"]
position = Vector2( 3.66669, -32.3333 )
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 600, 0 )

[node name="sky" type="Sprite" parent="Control/ParallaxBackground/sky"]
position = Vector2( 1.49658, 61.3613 )
texture = ExtResource( 10 )
centered = false
hframes = 4

[node name="sun" type="ParallaxLayer" parent="Control/ParallaxBackground"]
position = Vector2( 3.66669, -32.3333 )
motion_scale = Vector2( 0.1, 1 )

[node name="sun" type="Sprite" parent="Control/ParallaxBackground/sun"]
position = Vector2( -407.665, 57.1984 )
texture = ExtResource( 11 )
centered = false
hframes = 4

[node name="clouds" type="ParallaxLayer" parent="Control/ParallaxBackground"]
position = Vector2( 3.66669, -32.3333 )
motion_scale = Vector2( 0.4, 2 )
motion_mirroring = Vector2( 800, 0 )

[node name="clouds" type="Sprite" parent="Control/ParallaxBackground/clouds"]
position = Vector2( 109.406, 51.7255 )
texture = ExtResource( 8 )
centered = false
hframes = 2

[node name="bunnies" type="ParallaxLayer" parent="Control/ParallaxBackground"]
position = Vector2( 3.66669, -32.3333 )
motion_scale = Vector2( 0.6, 1 )
motion_mirroring = Vector2( 500, 0 )

[node name="bunnies" type="Sprite" parent="Control/ParallaxBackground/bunnies"]
position = Vector2( 47.4444, 63.6471 )
texture = ExtResource( 9 )
centered = false

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.715
margin_top = -58.9795
margin_right = 166.165
margin_bottom = -8.97949
texture = ExtResource( 3 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="Control/Title"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.2565
margin_top = 58.3889
margin_right = 80.7435
margin_bottom = 138.389
rect_min_size = Vector2( 100, 50 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Control/Title/Menu"]
margin_top = 12.0
margin_right = 150.0
margin_bottom = 38.0
rect_min_size = Vector2( 150, 0 )
focus_mode = 0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "START"
expand_icon = true

[node name="Backstory" type="Button" parent="Control/Title/Menu"]
margin_top = 42.0
margin_right = 150.0
margin_bottom = 68.0
rect_min_size = Vector2( 150, 0 )
focus_mode = 0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "BACKSTORY"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 320.724, 179.962 )

[node name="hallpass_logo" type="Sprite" parent="."]
position = Vector2( 29.3731, 277.881 )
scale = Vector2( 0.4, 0.4 )
z_index = 1
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="."]
margin_left = 50.6667
margin_top = 271.333
margin_right = 372.667
margin_bottom = 290.333
custom_fonts/font = SubResource( 6 )
text = "hallpass studios 2021 (https://hallpass.games)"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="Control" to="Control" method="_on_Control_gui_input"]
[connection signal="pressed" from="Control/Title/Menu/Start" to="Control" method="_on_Start_pressed"]
[connection signal="pressed" from="Control/Title/Menu/Backstory" to="Control" method="_on_Backstory_pressed"]
